feat(transaction): Implement Transaction record and integrate it into account