@@ -4,15 +4,19 @@ import lombok.Getter;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 @Getter
 public class Account {
 
     private BigDecimal balance;
+    private final List<Transaction> transactions;
 
     public Account() {
         this.balance = BigDecimal.ZERO;
+        this.transactions = new ArrayList<>();
     }
 
     public void deposit(BigDecimal amount) {
@@ -20,6 +24,7 @@ public class Account {
             throw new IllegalArgumentException("Deposit amount must be positive.");
         }
         this.balance = this.balance.add(amount);
+        transactions.add(new Transaction(LocalDate.now(), TransactionType.DEPOSIT, amount, this.balance));
     }
 
     public void withdraw(BigDecimal amount) {
@@ -30,9 +35,10 @@ public class Account {
             throw new IllegalArgumentException("Insufficient funds for withdrawal.");
         }
         this.balance = this.balance.subtract(amount);
+        transactions.add(new Transaction(LocalDate.now(), TransactionType.WITHDRAWAL, amount, this.balance));
     }
 
     public List<Transaction> getTransactions() {
-        return List.of(new Transaction(LocalDate.now(), TransactionType.DEPOSIT, BigDecimal.ZERO, BigDecimal.ZERO));
+        return Collections.unmodifiableList(transactions);
     }
 }
